<resources>
    <string name="app_name">Inventory App</string>

    <!-- Title text for the empty view, which describes the empty inventory list[CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Nothing going on here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add some inventory[CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding some Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="display_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="display_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="detail_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="detail_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="detail_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="detail_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="detail_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="detail_delete_product_failed">Error with deleting product</string>

    <string name="pleaseAdjustQuantity">Please add a product first to adjust the quantity</string>

    <string name="addProductToAdjust">Add Product Name, Price and Quantity before being able to adjust or
        order inventory</string>
    <string name="product_overview">Product Overview</string>
    <string name="stock_overview">Stock Overview</string>
    <string name="shipment_overview">Shipment Overview</string>
    <string name="product_name_hint">Product Name</string>
    <string name="price_hint">Price</string>
    <string name="add_quantity_hint">Add Quantity</string>
    <string name="order_more_button">Order More</string>
    <string name="description_hint">Description</string>
    <string name="product_description_label">Product Description</string>
    <string name="quanity_buttons_toast">Fill Quantity field and save product to use these buttons</string>
    <string name="no_more_stock">No more in Stock, select product to order more</string>
</resources>
