<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingLeft="8dp"
            android:text="@string/product_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords" />

            <!-- Product price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>


    </LinearLayout>

    <!-- Product Description category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingLeft="8dp"
            android:text="@string/product_description_label" />

        <LinearLayout
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Product description field -->
            <EditText
                android:id="@+id/edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:paddingLeft="4dp"
                android:scrollbars="vertical" />

        </LinearLayout>

    </LinearLayout>

    <!-- Stock category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <!-- Stock Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingLeft="8dp"
            android:text="@string/stock_overview" />

        <!-- Stock Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_stock_amount"
                style="@style/EditorFieldStyle"
                android:hint="@string/add_quantity_hint"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/decrease_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textColor="@color/text_buttons_color" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/increase_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textColor="@color/text_buttons_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/plus_25_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="plusTwentyFive"
                    android:text="+25"
                    android:textColor="@color/text_buttons_color" />

                <Button
                    android:id="@+id/plus_50_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="plusFifty"
                    android:text="+50"
                    android:textColor="@color/text_buttons_color" />

                <Button
                    android:id="@+id/plus_75_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="plusSeventyFive"
                    android:text="+75"
                    android:textColor="@color/text_buttons_color" />

                <Button
                    android:id="@+id/plus_100_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:elevation="10dp"
                    android:onClick="plusOneHundred"
                    android:text="+100"
                    android:textColor="@color/text_buttons_color" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_stock"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Shipment category -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <!--  Shipment Label -->
            <TextView
                style="@style/CategoryStyle"
                android:paddingLeft="8dp"
                android:text="@string/shipment_overview" />

            <!--Shipment Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="9dp">

                    <CheckBox
                        android:id="@+id/plus_25_check"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="+25" />

                    <CheckBox
                        android:id="@+id/plus_50_check"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="+50" />

                    <CheckBox
                        android:id="@+id/plus_75_check"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="+75" />

                    <CheckBox
                        android:id="@+id/plus_100_check"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="+100" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_receipt_white_24dp"
            app:elevation="10dp"
            app:fabSize="normal" />

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edit_image"
            android:layout_toRightOf="@+id/edit_image"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:onClick="addPhoto"
            android:text="Add Photo" />

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_photo_button"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2" />

    </RelativeLayout>

</LinearLayout>
